syntax = "proto3";

option csharp_namespace = "KianUSA.API.Services";

message SendCatalogRequestMessage{
	string CustomerFullName = 1;
	string CustomerEmail = 2;
	string CategorySlug = 3;
}
message SendResponseMessage{
	bool PutInEmailQueue = 1;
}
message SendContactUsRequestMessage{
	string Name = 1;
	string Family = 2;
	string Phone = 3;
	string Email = 4;
	string Comment = 5;
}
service EmailSrv{
	rpc SendCatalog(SendCatalogRequestMessage) returns (SendResponseMessage);
	rpc SendContactUs(SendContactUsRequestMessage) returns (SendResponseMessage);
}